--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -7,7 +7,6 @@
     margin: 0;
     border-radius: 30px;
     padding: 35px;
-
 }
 
 .align-bottom {
@@ -18,4 +17,6 @@
 .chat-container {
     overflow-y: auto;
     height: 100%;
+    display: flex;
+    flex-direction: column-reverse;
 }
