--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,18 +1,4 @@
-<div class='message-container' *ngIf="_message">
-    <img src="{{ autorAvatar }}" width="40px" height="40px" class="message-img" *ngIf="autorAvatar">
-    <div class="message-content">
-        <div class="message-head">
-            <div> {{ formatTimestampToHHMM(_message.timestamp) }}</div>
-            <div *ngIf="autorName!=''"><b>{{ autorName }}</b></div>
-        </div>
-        <mat-card>
-            <mat-card-content>{{ _message.content }}</mat-card-content>
-        </mat-card>
-    </div>
-</div>
-
-
-<div class='message-container inverted' *ngIf="_message">
+<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message">
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content">
         <div class="message-head">
