--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -1,14 +1,19 @@
 <mat-card id="channel" *ngIf="channelFirebaseService.selectedChannel  && userFirebaseService.currentUser.id!='' ">
-    <mat-card-header>
+    <div class='header'>
         <div class="header-title" width="fit-content">
-            <div><h2># {{ channelFirebaseService.selectedChannel.channelName }}</h2></div>
-            <div></div>
+            <div>
+                <h2># {{ channelFirebaseService.selectedChannel.channelName }}</h2>
+            </div>
+            <div>Channel dropdown</div>
         </div>
         <div class="user-avatar-list">
-            asd
             <img class="avatar-img" *ngFor="let user of channelFirebaseService.channelUsers" src="{{ user.avatar }}">
+            <div *ngFor="let user of channelFirebaseService.channelUsers"> 
+            {{ user.id }}
+            {{ user.avatar }}
+         </div>
         </div>
-    </mat-card-header>
+    </div>
     <mat-card-content id="channel-content"></mat-card-content>
     <div class="chat-container">
         <app-message *ngFor="let message of channelFirebaseService.selectedChannelMessages"
