--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,20 @@ textarea {
     border-radius: 30px;
 }
 
+.btn-blue{
+    background-color: #444DF2; 
+    color: white;
+    padding: 12px 25px 12px 25px;
+    font-family: 'Nunito', sans-serif;
+    border-radius: 30px;
+    border: 1px solid white;
+}
+.btn-white{
+    background-color: white; 
+    color: #444DF2;
+    padding: 12px 25px 12px 25px;
+    font-family: 'Nunito', sans-serif;
+    border-radius: 30px;
+    border: 1px solid #444DF2;
+}
+
