--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -8,5 +8,7 @@
         <mat-card>
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
+        <div class='message-footer'><div>Currentreactions</div><img src="assets/img/icons/addreaction.svg"></div>
     </div>
+    
 </div>
