--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -37,5 +37,10 @@
         align-items: center;
     }
 
+    .user-avatar-list{
+        display: flex;
+        align-items: center;
+    }
+
 
 }
