--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -39,6 +39,10 @@
                 line-height: 24.55px;
             }
         }
+
+        .message-footer{
+            display: flex;
+        }
     }
 
 
