--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -10,18 +10,25 @@
             <img class="avatar-img" *ngFor="let user of channelFirebaseService.channelUsers" src="{{ user.avatar }}"
                 alt="avatar">
             <div *ngFor="let user of channelFirebaseService.channelUsers">
-
                 {{ user.avatar }}
             </div>
-            <img class="avatar-img" src="assets/img/icons/addmembers.svg" >
+            <img class="avatar-img" src="assets/img/icons/addmembers.svg">
         </div>
     </div>
     <mat-card-content id="channel-content"></mat-card-content>
     <div class="chat-container">
-        <div *ngFor="let message of channelFirebaseService.selectedChannelMessages">
-            <app-date-line *ngIf="channelFirebaseService.isNewDay(message)" [message]="message"></app-date-line>
+        <div *ngFor="let message of channelFirebaseService.selectedChannelMessages; let i = index">
             <app-message [message]="message"></app-message>
+            <ng-template [appIfChanged]="getMessageTimeString(message)">
+                <app-date-line *ngIf="channelFirebaseService.selectedChannelMessages[i-1]"
+                    [messageTime]="getMessageTimeString(channelFirebaseService.selectedChannelMessages[i-1])"></app-date-line>
+            </ng-template>
         </div>
+        <app-date-line
+            *ngIf="channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1]"
+            [messageTime]="getMessageTimeString(channelFirebaseService.selectedChannelMessages[channelFirebaseService.selectedChannelMessages.length-1])">
+        </app-date-line>
+
     </div>
 
     <app-message-create></app-message-create>
