added badges of messages

--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -8,7 +8,10 @@
         <mat-card>
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
-        <div class='message-footer'><div>Currentreactions</div><img src="assets/img/icons/addreaction.svg"></div>
+        <div class='message-footer'>
+            <app-badge></app-badge>
+            <img src="assets/img/icons/addreaction.svg">
+        </div>
     </div>
     
 </div>
