--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -19,6 +19,7 @@
     height: 100%;
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
 }
 
 .avatar-img {
@@ -41,6 +42,4 @@
         display: flex;
         align-items: center;
     }
-
-
 }
