--- a/src/app/mainscreen/date-line/date-line.component.scss
+++ b/src/app/mainscreen/date-line/date-line.component.scss
@@ -14,7 +14,7 @@
     .line {
         top: calc(50% - 0.5px);
         position: absolute;
-        width: 100%;
+        width: calc( 100% - 1px);
         padding: 0.5px;
         background-color: #ADB0D9;
         z-index: 1;
