updated badges, toolbar

--- a/src/app/mainscreen/message/toolbar/toolbar.component.html
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar [ngClass]="{'inverted': isOwnMessage}" >
+<mat-toolbar class="toolbar" [ngClass]="{'inverted': isOwnMessage}" >
     <mat-toolbar-row >
         <img src="assets/img/icons/checkmark.svg">
         <img src="assets/img/icons/handsup.svg">
