--- a/src/app/mainscreen/message/badge/badge.component.html
+++ b/src/app/mainscreen/message/badge/badge.component.html
@@ -1,4 +1,3 @@
-<div class="demo-section">
-    <mat-icon matBadge="15" matBadgeColor="warn">home</mat-icon>
-    <!-- Include text description of the icon's meaning for screen-readers -->
+<div>
+    <mat-icon matBadge="15" aria-hidden="false" matBadgeColor="warn">home</mat-icon>
 </div>
