--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -103,6 +103,7 @@ $headerDropdownPositionRigth: 0px;
 
     #headerUserProfil-image-container {
         width: 100%;
+        min-width: 300px;
         display: flex;
         justify-content: center;
 
