--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -54,7 +54,7 @@
           *ngIf="contactForm.controls['nameInput'].errors?.['required']"
           [ngClass]="{ 'warning-text': true }"
         >
-          {{ "*Der Vorname und Nachname muss aus zwei Wörtern bestehen." }}
+          {{ "*Der Vorname und Nachname muss aus jeweils einem Wort bestehen." }}
         </span>
         <span
           class="required-informations"
