update message and message create placeholder

--- a/src/app/mainscreen/channel/message-form/message-create.component.html
+++ b/src/app/mainscreen/channel/message-form/message-create.component.html
@@ -13,7 +13,7 @@
     class="msg-write-container" 
     [(ngModel)]="message.content"
     *ngIf="channelFirebaseService.selectedChannel"
-    placeholder="">
+    placeholder="Nachricht an #{{ channelFirebaseService.selectedChannel.channelName }}" (click)="createMessage()">
 </textarea>
 </div>
 
