--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -41,6 +41,8 @@
                 font-weight: 400;
                 line-height: 24.55px;
                 padding: 20px;
+
+                white-space: pre-wrap;
             }
 
             app-toolbar {
