--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -12,7 +12,7 @@
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
         <div class='message-footer'>
-            <app-badge></app-badge>
+            <app-reaction [count]="2"></app-reaction>
             <img src="assets/img/icons/addreaction.svg">
         </div>
     </div>
