--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -1,5 +1,4 @@
 <mat-card class="user-register-container br-30">
-
   <span class="user-register-title">
     <div class="user-uper-register-title">
       <a class="user-uper-icon-title" href="/">
@@ -15,7 +14,7 @@
       ></span
     >
   </span>
-  
+
   <form [formGroup]="contactForm">
     <div class="user-register-input-container">
       <div class="user-register-box">
@@ -63,7 +62,9 @@
           *ngIf="contactForm.controls['nameInput'].hasError('minlength')"
           [ngClass]="{ 'warning-text': true }"
         >
-          {{ "*Der Vorname und Nachname muss aus jeweils einem Wort bestehen." }}
+          {{
+            "*Der Vorname und Nachname muss aus jeweils einem Wort bestehen."
+          }}
         </span>
       </div>
 
@@ -117,8 +118,6 @@
         </span>
       </div>
 
-    
-
       <div class="user-register-box">
         <div class="user-register-icon">
           <img
@@ -143,13 +142,22 @@
           name="password"
           (focus)="isPasswordInputActive = true"
           (blur)="isPasswordInputActive = false"
-         />
-         <div class="user-register-passwort-hide">
-          <img src="{{ isPasswordVisible ? showPasswordImage : hidePasswordImage }}" (click)="togglePasswordVisibility()" style="cursor: pointer" />
-          <span (click)="togglePasswordVisibility()" style="cursor: pointer"></span>
+        />
+        <div class="user-register-passwort-hide">
+          <img
+            src="{{
+              isPasswordVisible ? showPasswordImage : hidePasswordImage
+            }}"
+            (click)="togglePasswordVisibility()"
+            style="cursor: pointer"
+          />
+          <span
+            (click)="togglePasswordVisibility()"
+            style="cursor: pointer"
+          ></span>
         </div>
       </div>
-  
+
       <div
         *ngIf="
           contactForm.controls['passwordInput'].invalid &&
@@ -162,7 +170,9 @@
           *ngIf="contactForm.controls['passwordInput'].hasError('minlength')"
           [ngClass]="{ 'warning-password': true }"
         >
-        {{ "*Gültiges Passwort mit mindestens 6 Zeichen , einem Großbuchstaben und einem Sonderzeichen eingeben." }}
+          {{
+            "*Gültiges Passwort mit mindestens 6 Zeichen , einem Großbuchstaben und einem Sonderzeichen eingeben."
+          }}
         </span>
       </div>
     </div>
@@ -179,7 +189,8 @@
     >
   </div>
   <div class="user-register-button-container">
-    <button (click)="onSubmit()"
+    <button
+      (click)="onSubmit()"
       class="blue-button"
       mat-raised-button
       color="primary"
@@ -187,8 +198,6 @@
       [ngClass]="{ 'disabled-button': isButtonDisabled() }"
     >
       Weiter
-      
     </button>
   </div>
-  
 </mat-card>
