diaabled firebase thread service; Updated toolbar

--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,14 +1,15 @@
 
-<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message">
+<div class='message-container' [ngClass]="{'inverted': isOwnMessage}" *ngIf="_message" (mouseleave)="closeToolbar()" (mouseenter)="openToolbar()">
+    <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage"></app-toolbar>
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
-    <div class="message-content" (click)="toggleToolbar()">
+    <div class="message-content"  tabindex="0">
         <div class="message-head">
             <div> {{ formatTimestampToHHMM(_message.timestamp) }}</div>
             <div *ngIf="autorName!=''"><b>{{ autorName }}</b></div>
         </div>
         
         <mat-card> 
-            <app-toolbar *ngIf="showToolbar" [isOwnMessage]="isOwnMessage"></app-toolbar>
+           
             <mat-card-content>{{ _message.content }}</mat-card-content>
         </mat-card>
         <div class='message-footer'>
