--- a/src/app/mainscreen/message/toolbar/toolbar.component.scss
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.scss
@@ -1,10 +1,36 @@
-mat-toolbar{
+mat-toolbar {
     background-color: white;
     border: solid 1px #9747FF;
 
     border-radius: 25px 25px 25px 0px;
 }
 
-.inverted{
-    border-radius: 25px 25px 0px 25px;
+
+.message-edit-options {
+    position: absolute;
+    float: right;
+    background-color: white;
+    border-radius: 30px 30px 0px 30px;
+    width: 100%;
+    left: 80%;
+    top: 36px;
+
+    button {
+        cursor: pointer;
+        width: fit-content;
+        background-color: #ffffff;
+        border-radius: 30px 30px 30px 30px;
+        display: flex;
+        align-items: center;
+        width: calc(100% - 32px);
+        margin: 16px;
+        border: none;
+        padding: 8px;
+
+        &:hover {
+            background-color: #ECEEFE;
+            font-weight: 600;
+            color: #797EF3
+        }
+    }
 }
