--- a/src/app/mainscreen/message/toolbar/toolbar.component.scss
+++ b/src/app/mainscreen/message/toolbar/toolbar.component.scss
@@ -1,7 +1,6 @@
 mat-toolbar {
     background-color: white;
     border: solid 1px #9747FF;
-
     border-radius: 25px 25px 25px 0px;
 }
 
@@ -12,8 +11,8 @@ mat-toolbar {
     background-color: white;
     border-radius: 0px 30px 30px 30px;
     width: 100%;
-    left: 80%;
-    top: 36px;
+    left: 90%;
+    top: 35px;
 
     button {
         cursor: pointer;
@@ -22,8 +21,8 @@ mat-toolbar {
         border-radius: 30px 30px 30px 30px;
         display: flex;
         align-items: center;
-        width: calc(100% - 32px);
-        margin: 16px;
+        width: calc(100% - 16px);
+        margin: 8px;
         border: none;
         padding: 8px;
 
@@ -33,4 +32,8 @@ mat-toolbar {
             color: #797EF3
         }
     }
+}
+
+message-reaction-options{
+
 }
