--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -190,7 +190,7 @@
   </div>
   <div class="user-register-button-container">
     <button
-      (click)="onSubmit()"
+      (click)="closeRegister() ;onSubmit()"
       class="blue-button"
       mat-raised-button
       color="primary"
