added smiley options in addreactionmodule

--- a/src/app/mainscreen/channel/message-form/message-create.component.html
+++ b/src/app/mainscreen/channel/message-form/message-create.component.html
@@ -1,8 +1,9 @@
+<app-addreaction *ngIf="showEmojiList"></app-addreaction>
 <div class="msg-create-container">
     <div class='option-icons'>
         <div class="msg-mods">
         <img src="assets/img/icons/add.svg">
-        <img src="assets/img/icons/addreaction.svg">
+        <img src="assets/img/icons/addreaction.svg" (click)="toggleEmojiList()">
         <img src="assets/img/icons/alternateemail.svg">
     </div>
     <div class="msg-send">
@@ -16,6 +17,10 @@
     placeholder="Nachricht an #{{ channelFirebaseService.selectedChannel.channelName }}" (click)="createMessage()">
 </textarea>
 </div>
+
+<div (emojiSelectedOutput)="handleEmojiSelection($event)"></div>
+
+
 
 
 
