--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -10,7 +10,8 @@
     </div>
         <app-login *ngIf="showLogin && !imprint && !privacyPolicy && !showAvatar"></app-login>
         <app-register *ngIf="showRegister && !showLogin && !imprint && !privacyPolicy && !showAvatar" (closeRegisterView)="closeRegister()"></app-register>
-        <app-avatar-choose *ngIf="showAvatar && !showLogin"></app-avatar-choose>
+        <app-avatar-choose *ngIf="showAvatar && !showLogin" (closeAvatarView)="closeAvatar()"></app-avatar-choose>
+        <app-forgot-password *ngIf="showForgotPasswort"></app-forgot-password>
         <app-imprint *ngIf="imprint" (closeImprintView)="closeImprintAndPrivacy()"></app-imprint>
         <app-privacy-policy *ngIf="privacyPolicy" (closePrivacyPolicyView)="closeImprintAndPrivacy()"></app-privacy-policy>
         
