--- a/src/app/add-channel-dialog/add-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-channel-dialog.component.html
@@ -1,6 +1,7 @@
 <form class="addChannelDialogContainer" [formGroup]="addChannelForm"
     (ngSubmit)="onSubmitNewChannel(addChannelForm.value)">
-    <mat-form-field class="formFieldChannelName">
+    
+    <mat-form-field class="formFieldChannelName removeBackground">
         <h1>Channel erstellen</h1>
 
         <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein #marketing zum
@@ -12,7 +13,7 @@
             <input matInput class="channelNameInput" formControlName="channelName" palceholder="# z.B. Kooperationsprojekte" required>
         </div>
 
-        <mat-error *ngFor="let validation of validation_messages.channelName">
+        <mat-error class="materror1" *ngFor="let validation of validation_messages.channelName">
             <mat-error class="error-message"
                 *ngIf="addChannelForm.get('channelName')?.hasError(validation.type) && (addChannelForm.get('channelName')?.dirty || addChannelForm.get('channelName')?.touched)">
                 {{validation.message}}
