--- a/src/app/add-channel-dialog/add-channel-dialog.component.scss
+++ b/src/app/add-channel-dialog/add-channel-dialog.component.scss
@@ -1,5 +1,5 @@
 .addChannelDialogContainer {
-    height: 447px;
+    height: 556px;
     width: 738px;
     display: flex;
     flex-direction: column;
@@ -8,18 +8,39 @@
     padding-right: 30px;
     background-color: white;
     border-radius: 35px;
+}
+
+.mat-form-field.mat-mdc-form-field.formFieldChannelName.removeBackground.ng-tns-c1205077789-0.ng-star-inserted.mat-mdc-form-field-type-mat-input.mat-form-field-appearance-fill.mat-primary.ng-pristine.ng-invalid.mat-form-field-invalid.ng-touched > * {
+    background-color: unset;
+}
+
+.mat-form-field.mat-mdc-form-field.formFieldChannelName.ng-tns-c1205077789-0.ng-star-inserted.mat-mdc-form-field-type-mat-input.mat-form-field-appearance-fill.mat-primary.ng-pristine.ng-invalid.mat-form-field-invalid.ng-touched > * {
+    background-color: unset;
 
 }
 
-mat-mdc-dialog-container .mdc-dialog__surface {
-    border-radius: 100%;
-}
-mat-dialog-container {
-    
+::ng-deep .mat-mdc-dialog-surface.mdc-dialog__surface {
+    border-radius: 30px;
 }
 
-.mat-mdc-dialog-surface {
-    border-radius: 35px;
+::ng-deep .mat-mdc-form-field-infix {
+    width: 100%;
+}
+
+::ng-deep .mat-mdc-form-field-focus-overlay.ng-tns-c1205077789-0.ng-star-inserted {
+    background-color: unset;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper.mdc-text-field.ng-tns-c1205077789-0.mdc-text-field--filled.mdc-text-field--no-label.mdc-text-field--invalid {
+    background-color: unset;
+}
+
+::ng-deep .mat-mdc-form-field-flex.ng-tns-c1205077789-0 {
+    background-color: unset;
+}
+
+.materror1 > * {
+    display: unset;
 }
 
 .formFieldChannelName {
@@ -36,17 +57,22 @@ mat-form-field {
     }
 }
 
-.channelNameInput {
-    border: 1px solid black;
+::ng-deep input#mat-input-0{
+    border: solid 1px #444DF2;
+    height: 57px;
     border-radius: 30px;
-    height: 58px;
 }
 
-.channelDescriptionInput {
-    border: 1px solid black;
+::ng-deep input#mat-input-1 {
+    border: solid 1px #444DF2;
+    height: 57px;
     border-radius: 30px;
-    height: 68px;
 }
+
+::ng-deep .mdc-line-ripple  {
+    display: none;
+}
+
 .createChannelButton {
     width: 126px;
     height: 58px;
