smileys on messageCreate

--- a/src/app/mainscreen/channel/message-form/message-create.component.html
+++ b/src/app/mainscreen/channel/message-form/message-create.component.html
@@ -1,4 +1,4 @@
-<app-addreaction *ngIf="showEmojiList"></app-addreaction>
+<app-addreaction *ngIf="showEmojiList" (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
 <div class="msg-create-container">
     <div class='option-icons'>
         <div class="msg-mods">
@@ -10,15 +10,13 @@
         <img src="assets/img/icons/send.svg" (click)="createMessage()">
     </div>
     </div>    
-<textarea cdkTextareaAutosize
+<textarea cdkTextareaAutosize #messageCreate
     class="msg-write-container" 
     [(ngModel)]="message.content"
     *ngIf="channelFirebaseService.selectedChannel"
     placeholder="Nachricht an #{{ channelFirebaseService.selectedChannel.channelName }}" (click)="createMessage()">
 </textarea>
 </div>
-
-<div (emojiSelectedOutput)="handleEmojiSelection($event)"></div>
 
 
 
