--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -8,6 +8,7 @@
     padding: 35px 0px 35px 0px;
 }
 
+
 .align-bottom {
     position: sticky;
     bottom: 0;
@@ -42,4 +43,9 @@
         display: flex;
         align-items: center;
     }
+}
+
+
+app-message-create{
+    padding: 0px 35px 0px 35px;
 }
