working on threads

--- a/src/app/mainscreen/thread/thread.component.html
+++ b/src/app/mainscreen/thread/thread.component.html
@@ -1,3 +1,3 @@
 <mat-card id="thread" class="br-30">
-    <mat-card-content id="thread-content">thread</mat-card-content>
+    <mat-card-content id="thread-content">Thread </mat-card-content> <span>{{ messageFirebaseService.message?.content }}</span>
 </mat-card>
